# sentinel_arbiter

./: .env.example  .gitignore  DECISIONS.md  GOAL.md  PROGRESS.md  README.md  RELEASE_CHECKLIST.md  REPO_MAP.md  RISK_NOTES.md  pyproject.toml
data/cases/: invalid_missing_timepoint_case.json  valid_ai_weak_fact_case.json  valid_home_plan_feasibility_case.json  valid_limited_added_value_case.json  valid_low_value_gap_suppression_case.json  valid_material_gap_case.json  valid_therapy_improvement_case.json  (+1 more)
docs/: 00_hard_decisions.md  01_existing_needs_and_problem_fit.md  02_product_definition.md  03_methodology_prudence_calculus.md  04_architecture.md  05_agent_to_node_conversion.md  06_contrarian_view_and_mitigations.md  07_requirements.md  08_user_stories.md  09_ui_workbench_spec.md  10_api_contract.md  11_data_model_notes.md  12_security_privacy_governance.md  13_kill_criteria.md  14_glossary.md  15_codex_build_epics.md  16_repo_structure_and_work_packages.md  17_model_and_framework_strategy.md  18_deterministic_poc_status.md  19_repository_publishing.md  20_emex_admsve_reuse_evaluation.md  21_goal_completion_audit.md  22_local_app_ux_verification.md
examples/: 01_synthetic_case_templates.md  02_minimal_poc_case_set.md  03_sample_receipt_shape.md
prompts/: 01_role_agent_prompt_contracts.md  02_evidenceflow_prompt_contracts.md  03_synthesizer_prompt_contract.md
roadmaps/: 01_short_term_poc_roadmap.md  02_long_term_roadmap_after_poc.md  03_decision_tree_after_poc_results.md  04_phase_0_ed_disposition_implementation_plan.md
schemas/: approval_manifest.schema.json  approval_trace.schema.json  decision_episode.schema.json  ed_decision_episode.schema.json  ed_sentinel_receipt.schema.json  ensemble_contribution.schema.json  evidenceflow_result.schema.json  node_audit.schema.json  redaction_report.schema.json  role_assessment.schema.json  sentinel_receipt.schema.json  static_evidenceflow_result.schema.json  static_input_bundle.schema.json  static_role_assessment.schema.json
tests/: test_full_poc_documentation.py  test_goal_completion_audit.py  test_openrouter_compare.py  test_phase1_models.py  test_phase2_case_library.py  test_phase3_evaluation_report.py  test_phase3_prudence_graph.py  test_phase4_static_inputs.py  test_phase6_receipts.py  test_phase7_workbench.py  test_phase_b_constructed_intake.py  test_phase_c_reviewer_approval.py  test_phase_d_node_audit.py  test_phase_e_ensemble_contributions.py  test_phase_g_local_demo_app.py
validation/: 01_metrics_and_evaluation_plan.md  02_case_replay_validation_plan.md  03_human_review_panel_plan.md
(+59 files in other folders)
