[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-workbench"
version = "0.1.0"
description = "Local synthetic ED disposition replay governance workbench"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.12,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
sentinel-workbench-export-schemas = "sentinel_workbench.schema_export:main"
sentinel-workbench-validate = "sentinel_workbench.validate:main"
sentinel-workbench-evaluate = "sentinel_workbench.evaluate:main"
sentinel-workbench-validate-static-inputs = "sentinel_workbench.static_inputs:main"
sentinel-workbench-generate-receipts = "sentinel_workbench.receipts:main"
sentinel-workbench-generate-ui = "sentinel_workbench.workbench:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
