[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-workbench"
version = "0.1.0"
description = "Local synthetic ED disposition replay governance workbench"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.12,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
sentinel-workbench-export-schemas = "sentinel_workbench.schema_export:main"
sentinel-workbench-validate = "sentinel_workbench.validate:main"
sentinel-workbench-evaluate = "sentinel_workbench.evaluate:main"
sentinel-workbench-validate-static-inputs = "sentinel_workbench.static_inputs:main"
sentinel-workbench-generate-receipts = "sentinel_workbench.receipts:main"
sentinel-workbench-generate-ui = "sentinel_workbench.workbench:main"
sentinel-workbench-prepare-constructed-input = "sentinel_workbench.constructed_intake:main"
sentinel-workbench-approve-constructed-input = "sentinel_workbench.approval:main"
sentinel-workbench-run-approved-demo = "sentinel_workbench.demo_run:main"
sentinel-workbench-local-demo = "sentinel_workbench.local_app:main"
sentinel-workbench-openrouter-compare = "sentinel_workbench.openrouter_compare:main"
sentinel-workbench-goal-audit = "sentinel_workbench.goal_audit:main"
sentinel-workbench-final-verification = "sentinel_workbench.final_verification:main"
sentinel-workbench-ux-verification = "sentinel_workbench.ux_verification:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
